--- a/languages/wp-job-manager.pot
+++ b/languages/wp-job-manager.pot
@@ -2,9 +2,9 @@
 # This file is distributed under the same license as the WP Job Manager package.
 msgid ""
 msgstr ""
-"Project-Id-Version: WP Job Manager 1.13.0\n"
+"Project-Id-Version: WP Job Manager 1.14.0\n"
 "Report-Msgid-Bugs-To: http://wordpress.org/tag/WP-Job-Manager\n"
-"POT-Creation-Date: 2014-07-22 17:11:04+00:00\n"
+"POT-Creation-Date: 2014-07-26 18:43:05+00:00\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -33,12 +33,12 @@ msgstr ""
 
 #: includes/admin/class-wp-job-manager-cpt.php:48
 #: includes/admin/class-wp-job-manager-cpt.php:49
-msgid "Approve Jobs"
+msgid "Approve %s"
 msgstr ""
 
 #: includes/admin/class-wp-job-manager-cpt.php:51
 #: includes/admin/class-wp-job-manager-cpt.php:52
-msgid "Expire Jobs"
+msgid "Expire %s"
 msgstr ""
 
 #: includes/admin/class-wp-job-manager-cpt.php:139
@@ -56,11 +56,12 @@ msgid "Select a category"
 msgstr ""
 
 #: includes/admin/class-wp-job-manager-cpt.php:237
-msgid "Job position title"
+#: includes/admin/class-wp-job-manager-cpt.php:283
+msgid "Position"
 msgstr ""
 
 #: includes/admin/class-wp-job-manager-cpt.php:253
-msgid "Job listing updated. <a href=\"%s\">View Job</a>"
+msgid "%s updated. <a href=\"%s\">View</a>"
 msgstr ""
 
 #: includes/admin/class-wp-job-manager-cpt.php:254
@@ -72,29 +73,29 @@ msgid "Custom field deleted."
 msgstr ""
 
 #: includes/admin/class-wp-job-manager-cpt.php:256
-msgid "Job listing updated."
+msgid "%s updated."
 msgstr ""
 
 #: includes/admin/class-wp-job-manager-cpt.php:257
-msgid "Job listing restored to revision from %s"
+msgid "%s restored to revision from %s"
 msgstr ""
 
 #: includes/admin/class-wp-job-manager-cpt.php:258
-msgid "Job listing published. <a href=\"%s\">View Job</a>"
+msgid "%s published. <a href=\"%s\">View</a>"
 msgstr ""
 
 #: includes/admin/class-wp-job-manager-cpt.php:259
-msgid "Job listing saved."
+msgid "%s saved."
 msgstr ""
 
 #: includes/admin/class-wp-job-manager-cpt.php:260
-msgid "Job listing submitted. <a target=\"_blank\" href=\"%s\">Preview Job</a>"
+msgid "%s submitted. <a target=\"_blank\" href=\"%s\">Preview</a>"
 msgstr ""
 
 #: includes/admin/class-wp-job-manager-cpt.php:261
 msgid ""
-"Job listing scheduled for: <strong>%1$s</strong>. <a target=\"_blank\" href="
-"\"%2$s\">Preview Job</a>"
+"%s scheduled for: <strong>%1$s</strong>. <a target=\"_blank\" href=\"%2$s"
+"\">Preview</a>"
 msgstr ""
 
 #: includes/admin/class-wp-job-manager-cpt.php:262
@@ -102,16 +103,11 @@ msgid "M j, Y @ G:i"
 msgstr ""
 
 #: includes/admin/class-wp-job-manager-cpt.php:263
-msgid ""
-"Job listing draft updated. <a target=\"_blank\" href=\"%s\">Preview Job</a>"
+msgid "%s draft updated. <a target=\"_blank\" href=\"%s\">Preview</a>"
 msgstr ""
 
 #: includes/admin/class-wp-job-manager-cpt.php:282
 msgid "Type"
-msgstr ""
-
-#: includes/admin/class-wp-job-manager-cpt.php:283
-msgid "Position"
 msgstr ""
 
 #: includes/admin/class-wp-job-manager-cpt.php:284
@@ -119,6 +115,7 @@ msgid "Posted"
 msgstr ""
 
 #: includes/admin/class-wp-job-manager-cpt.php:285
+#: includes/admin/class-wp-job-manager-writepanels.php:67
 msgid "Expires"
 msgstr ""
 
@@ -131,7 +128,7 @@ msgid "Featured?"
 msgstr ""
 
 #: includes/admin/class-wp-job-manager-cpt.php:289
-#: includes/class-wp-job-manager-shortcodes.php:162
+#: includes/class-wp-job-manager-shortcodes.php:163
 msgid "Filled?"
 msgstr ""
 
@@ -144,7 +141,7 @@ msgid "Actions"
 msgstr ""
 
 #: includes/admin/class-wp-job-manager-cpt.php:314
-msgid "Job ID: %d"
+msgid "ID: %d"
 msgstr ""
 
 #: includes/admin/class-wp-job-manager-cpt.php:340
@@ -180,17 +177,17 @@ msgid "Delete"
 msgstr ""
 
 #: includes/admin/class-wp-job-manager-settings.php:42
-#: includes/class-wp-job-manager-post-types.php:143
+#: includes/class-wp-job-manager-post-types.php:163
 #: includes/class-wp-job-manager-post-types.php:233
 msgid "Job Listings"
 msgstr ""
 
 #: includes/admin/class-wp-job-manager-settings.php:48
-msgid "Jobs per page"
+msgid "Listings per page"
 msgstr ""
 
 #: includes/admin/class-wp-job-manager-settings.php:49
-msgid "How many jobs should be shown per page by default?"
+msgid "How many listings should be shown per page by default?"
 msgstr ""
 
 #: includes/admin/class-wp-job-manager-settings.php:55
@@ -202,25 +199,25 @@ msgid "Hide filled positions"
 msgstr ""
 
 #: includes/admin/class-wp-job-manager-settings.php:57
-msgid "If enabled, filled positions will be hidden from the job list."
+msgid "If enabled, filled positions will be hidden."
 msgstr ""
 
 #: includes/admin/class-wp-job-manager-settings.php:64
-msgid "Job categories"
+msgid "Job Categories"
 msgstr ""
 
 #: includes/admin/class-wp-job-manager-settings.php:65
-msgid "Enable job categories"
+msgid "Enable categories for listings"
 msgstr ""
 
 #: includes/admin/class-wp-job-manager-settings.php:66
 msgid ""
-"Choose whether to enable job categories. Categories must be setup by an "
-"admin for users to choose during job submission."
+"Choose whether to enable categories. Categories must be setup by an admin to "
+"allow users to choose them during submission."
 msgstr ""
 
 #: includes/admin/class-wp-job-manager-settings.php:73
-msgid "Job Submission"
+msgid "Submissions"
 msgstr ""
 
 #: includes/admin/class-wp-job-manager-settings.php:78
@@ -234,7 +231,7 @@ msgstr ""
 #: includes/admin/class-wp-job-manager-settings.php:80
 msgid ""
 "If enabled, non-logged in users will be able to create an account by "
-"entering their email address on the job submission form."
+"entering their email address on the submission form."
 msgstr ""
 
 #: includes/admin/class-wp-job-manager-settings.php:87
@@ -243,8 +240,8 @@ msgstr ""
 
 #: includes/admin/class-wp-job-manager-settings.php:88
 msgid ""
-"If you enable registration on your job submission form, choose a role for "
-"the new user."
+"If you enable registration on your submission form, choose a role for the "
+"new user."
 msgstr ""
 
 #: includes/admin/class-wp-job-manager-settings.php:95
@@ -252,12 +249,12 @@ msgid "Account required"
 msgstr ""
 
 #: includes/admin/class-wp-job-manager-settings.php:96
-msgid "Job submission requires an account"
+msgid "Submitting listings requires an account"
 msgstr ""
 
 #: includes/admin/class-wp-job-manager-settings.php:97
 msgid ""
-"If disabled, non-logged in users will be able to submit job listings without "
+"If disabled, non-logged in users will be able to submit listings without "
 "creating an account."
 msgstr ""
 
@@ -288,7 +285,7 @@ msgid "Application method"
 msgstr ""
 
 #: includes/admin/class-wp-job-manager-settings.php:121
-msgid "Choose what employers can use for their job application method."
+msgid "Choose the contact method for listings."
 msgstr ""
 
 #: includes/admin/class-wp-job-manager-settings.php:124
@@ -314,7 +311,7 @@ msgid ""
 msgstr ""
 
 #: includes/admin/class-wp-job-manager-settings.php:139
-msgid "Job Dashboard Page Slug"
+msgid "Dashboard Page Slug"
 msgstr ""
 
 #: includes/admin/class-wp-job-manager-settings.php:140
@@ -333,18 +330,18 @@ msgstr ""
 
 #: includes/admin/class-wp-job-manager-writepanels.php:27
 #: includes/forms/class-wp-job-manager-form-submit-job.php:138
-msgid "Job location"
+#: templates/job-filters.php:14 templates/job-filters.php:15
+msgid "Location"
 msgstr ""
 
 #: includes/admin/class-wp-job-manager-writepanels.php:28
 #: includes/forms/class-wp-job-manager-form-submit-job.php:142
-msgid "e.g. \"London, UK\", \"New York\", \"Houston, TX\""
+msgid "e.g. \"London\""
 msgstr ""
 
 #: includes/admin/class-wp-job-manager-writepanels.php:29
 #: includes/forms/class-wp-job-manager-form-submit-job.php:139
-msgid ""
-"Leave this blank if the job can be done from anywhere (i.e. telecommuting)"
+msgid "Leave this blank if the location is not important"
 msgstr ""
 
 #: includes/admin/class-wp-job-manager-writepanels.php:32
@@ -359,7 +356,7 @@ msgstr ""
 #: includes/admin/class-wp-job-manager-writepanels.php:34
 msgid ""
 "This field is required for the \"application\" area to appear beneath the "
-"job listing."
+"listing."
 msgstr ""
 
 #: includes/admin/class-wp-job-manager-writepanels.php:37
@@ -396,17 +393,13 @@ msgid "Position filled?"
 msgstr ""
 
 #: includes/admin/class-wp-job-manager-writepanels.php:62
-msgid "Feature this job listing?"
+msgid "Feature this listing?"
 msgstr ""
 
 #: includes/admin/class-wp-job-manager-writepanels.php:64
 msgid ""
 "Featured listings will be sticky during searches, and can be styled "
 "differently."
-msgstr ""
-
-#: includes/admin/class-wp-job-manager-writepanels.php:67
-msgid "Job Expires"
 msgstr ""
 
 #: includes/admin/class-wp-job-manager-writepanels.php:68
@@ -417,31 +410,31 @@ msgstr ""
 msgid "Posted by"
 msgstr ""
 
-#: includes/admin/class-wp-job-manager-writepanels.php:84
-msgid "Job Listing Data"
+#: includes/admin/class-wp-job-manager-writepanels.php:86
+msgid "%s Data"
 msgstr ""
 
-#: includes/admin/class-wp-job-manager-writepanels.php:102
+#: includes/admin/class-wp-job-manager-writepanels.php:104
 msgid "Use file"
 msgstr ""
 
-#: includes/admin/class-wp-job-manager-writepanels.php:102
+#: includes/admin/class-wp-job-manager-writepanels.php:104
 msgid "Upload"
 msgstr ""
 
-#: includes/admin/class-wp-job-manager-writepanels.php:270
+#: includes/admin/class-wp-job-manager-writepanels.php:272
 msgid "Guest user"
 msgstr ""
 
-#: includes/class-wp-job-manager-ajax.php:112
-msgid "Showing %s&ldquo;%s&rdquo; %sjobs"
-msgstr ""
-
 #: includes/class-wp-job-manager-ajax.php:114
-msgid "Showing all %s%sjobs"
+msgid "Showing %s"
 msgstr ""
 
-#: includes/class-wp-job-manager-ajax.php:117
+#: includes/class-wp-job-manager-ajax.php:116
+msgid "Showing all %s"
+msgstr ""
+
+#: includes/class-wp-job-manager-ajax.php:119
 msgid "located in &ldquo;%s&rdquo;"
 msgstr ""
 
@@ -464,11 +457,12 @@ msgid "Employer"
 msgstr ""
 
 #: includes/class-wp-job-manager-post-types.php:49
-msgid "Job Category"
+#: includes/forms/class-wp-job-manager-form-submit-job.php:155
+msgid "Job category"
 msgstr ""
 
 #: includes/class-wp-job-manager-post-types.php:50
-msgid "Job Categories"
+msgid "Job categories"
 msgstr ""
 
 #: includes/class-wp-job-manager-post-types.php:54
@@ -521,11 +515,12 @@ msgid "New %s Name"
 msgstr ""
 
 #: includes/class-wp-job-manager-post-types.php:95
-msgid "Job Type"
+#: includes/forms/class-wp-job-manager-form-submit-job.php:146
+msgid "Job type"
 msgstr ""
 
 #: includes/class-wp-job-manager-post-types.php:96
-msgid "Job Types"
+msgid "Job types"
 msgstr ""
 
 #: includes/class-wp-job-manager-post-types.php:100
@@ -534,7 +529,11 @@ msgid "job-type"
 msgstr ""
 
 #: includes/class-wp-job-manager-post-types.php:142
-msgid "Job Listing"
+msgid "Job"
+msgstr ""
+
+#: includes/class-wp-job-manager-post-types.php:143
+msgid "Jobs"
 msgstr ""
 
 #: includes/class-wp-job-manager-post-types.php:146
@@ -573,11 +572,11 @@ msgid "No %s found in trash"
 msgstr ""
 
 #: includes/class-wp-job-manager-post-types.php:177
-msgid "This is where you can create and manage job listings."
+msgid "This is where you can create and manage %s."
 msgstr ""
 
 #: includes/class-wp-job-manager-post-types.php:212
-#: wp-job-manager-functions.php:156
+#: wp-job-manager-functions.php:158
 msgctxt "post status"
 msgid "Expired"
 msgstr ""
@@ -589,11 +588,11 @@ msgstr[0] ""
 msgstr[1] ""
 
 #: includes/class-wp-job-manager-shortcodes.php:64
-msgid "Invalid Job ID"
+msgid "Invalid ID"
 msgstr ""
 
 #: includes/class-wp-job-manager-shortcodes.php:71
-msgid "This job is already filled"
+msgid "This position has already been filled"
 msgstr ""
 
 #: includes/class-wp-job-manager-shortcodes.php:77
@@ -601,64 +600,59 @@ msgid "%s has been filled"
 msgstr ""
 
 #: includes/class-wp-job-manager-shortcodes.php:82
-msgid "This job is already not filled"
+msgid "This position is not filled"
 msgstr ""
 
-#: includes/class-wp-job-manager-shortcodes.php:88
+#: includes/class-wp-job-manager-shortcodes.php:89
 msgid "%s has been marked as not filled"
 msgstr ""
 
-#: includes/class-wp-job-manager-shortcodes.php:95
+#: includes/class-wp-job-manager-shortcodes.php:96
 msgid "%s has been deleted"
 msgstr ""
 
-#: includes/class-wp-job-manager-shortcodes.php:121
-msgid "You need to be signed in to manage your job listings."
+#: includes/class-wp-job-manager-shortcodes.php:122
+msgid "You need to be signed in to manage your listings."
 msgstr ""
 
-#: includes/class-wp-job-manager-shortcodes.php:161
-msgid "Job Title"
-msgstr ""
-
-#: includes/class-wp-job-manager-shortcodes.php:163
-msgid "Date Posted"
-msgstr ""
-
-#: includes/class-wp-job-manager-shortcodes.php:164
-msgid "Date Expires"
-msgstr ""
-
-#: includes/class-wp-job-manager-shortcodes.php:252
-#: includes/class-wp-job-manager-shortcodes.php:287
-msgid "Load more job listings"
-msgstr ""
-
-#: includes/class-wp-job-manager-widgets.php:139
-msgid "Display a list of the most recent jobs on your site."
-msgstr ""
-
-#: includes/class-wp-job-manager-widgets.php:141
-msgid "Recent Job Listings"
-msgstr ""
-
-#: includes/class-wp-job-manager-widgets.php:145
-msgid "Recent Jobs"
-msgstr ""
-
-#: includes/class-wp-job-manager-widgets.php:146
+#: includes/class-wp-job-manager-shortcodes.php:162
+#: includes/class-wp-job-manager-widgets.php:148
+#: includes/forms/class-wp-job-manager-form-submit-job.php:131
 msgid "Title"
 msgstr ""
 
-#: includes/class-wp-job-manager-widgets.php:154
-msgid "Number of jobs to show"
+#: includes/class-wp-job-manager-shortcodes.php:164
+msgid "Date Posted"
+msgstr ""
+
+#: includes/class-wp-job-manager-shortcodes.php:165
+msgid "Date Expires"
+msgstr ""
+
+#: includes/class-wp-job-manager-shortcodes.php:253
+#: includes/class-wp-job-manager-shortcodes.php:288
+msgid "Load more listings"
+msgstr ""
+
+#: includes/class-wp-job-manager-widgets.php:141
+msgid "Display a list of the most recent listings on your site."
+msgstr ""
+
+#: includes/class-wp-job-manager-widgets.php:143
+#: includes/class-wp-job-manager-widgets.php:147
+msgid "Recent %s"
+msgstr ""
+
+#: includes/class-wp-job-manager-widgets.php:156
+msgid "Number of listings to show"
 msgstr ""
 
 #: includes/forms/class-wp-job-manager-form-edit-job.php:41
-msgid "Invalid job"
+msgid "Invalid listing"
 msgstr ""
 
 #: includes/forms/class-wp-job-manager-form-edit-job.php:84
-msgid "Update job listing"
+msgid "Save changes"
 msgstr ""
 
 #: includes/forms/class-wp-job-manager-form-edit-job.php:111
@@ -666,7 +660,7 @@ msgid "Your changes have been saved."
 msgstr ""
 
 #: includes/forms/class-wp-job-manager-form-edit-job.php:111
-msgid "View Job Listing &rarr;"
+msgid "View &rarr;"
 msgstr ""
 
 #: includes/forms/class-wp-job-manager-form-submit-job.php:22
@@ -702,18 +696,6 @@ msgstr ""
 
 #: includes/forms/class-wp-job-manager-form-submit-job.php:124
 msgid "Enter an email address or website URL"
-msgstr ""
-
-#: includes/forms/class-wp-job-manager-form-submit-job.php:131
-msgid "Job title"
-msgstr ""
-
-#: includes/forms/class-wp-job-manager-form-submit-job.php:146
-msgid "Job type"
-msgstr ""
-
-#: includes/forms/class-wp-job-manager-form-submit-job.php:155
-msgid "Job category"
 msgstr ""
 
 #: includes/forms/class-wp-job-manager-form-submit-job.php:163
@@ -766,11 +748,11 @@ msgid "Please enter a valid application email address or URL"
 msgstr ""
 
 #: includes/forms/class-wp-job-manager-form-submit-job.php:457
-msgid "Preview job listing &rarr;"
+msgid "Preview &rarr;"
 msgstr ""
 
 #: includes/forms/class-wp-job-manager-form-submit-job.php:494
-msgid "You must be signed in to post a new job listing."
+msgid "You must be signed in to post a new listing."
 msgstr ""
 
 #: includes/forms/class-wp-job-manager-form-submit-job.php:603
@@ -816,7 +798,7 @@ msgid "optionally"
 msgstr ""
 
 #: templates/account-signin.php:31
-msgid "You must sign in to create a new job listing."
+msgid "You must sign in to create a new listing."
 msgstr ""
 
 #: templates/account-signin.php:38
@@ -835,11 +817,11 @@ msgid "Posted %s ago"
 msgstr ""
 
 #: templates/content-no-jobs-found.php:1
-msgid "No more jobs found matching your selection."
+msgid "No more results found."
 msgstr ""
 
 #: templates/content-single-job_listing.php:8
-msgid "This job listing has expired"
+msgid "This listing has expired"
 msgstr ""
 
 #: templates/content-single-job_listing.php:24
@@ -880,12 +862,12 @@ msgstr ""
 
 #: templates/job-dashboard.php:2
 msgid ""
-"Your job listings are shown in the table below. Expired listings will be "
+"Your listings are shown in the table below. Expired listings will be "
 "automatically removed after 30 days."
 msgstr ""
 
 #: templates/job-dashboard.php:14
-msgid "You do not have any active job listings."
+msgid "You do not have any active listings."
 msgstr ""
 
 #: templates/job-dashboard.php:36
@@ -900,20 +882,8 @@ msgstr ""
 msgid "Relist"
 msgstr ""
 
-#: templates/job-filters.php:9
+#: templates/job-filters.php:9 templates/job-filters.php:10
 msgid "Keywords"
-msgstr ""
-
-#: templates/job-filters.php:10
-msgid "All Jobs"
-msgstr ""
-
-#: templates/job-filters.php:14
-msgid "Location"
-msgstr ""
-
-#: templates/job-filters.php:15
-msgid "Any Location"
 msgstr ""
 
 #: templates/job-filters.php:24
@@ -921,68 +891,66 @@ msgid "Category"
 msgstr ""
 
 #: templates/job-filters.php:25
-msgid "All Job Categories"
+msgid "Any category"
 msgstr ""
 
 #: templates/job-filters.php:34
 msgid ""
 "Your browser does not support JavaScript, or it is disabled. JavaScript must "
-"be enabled in order to view job listings."
+"be enabled in order to view listings."
 msgstr ""
 
 #: templates/job-submit.php:35
 msgid "Company details"
 msgstr ""
 
-#: templates/job-submitted.php:4
+#: templates/job-submitted.php:6
 msgid ""
-"Job listed successfully. To view your job listing <a href=\"%s\">click here</"
-"a>."
+"%s listed successfully. To view your listing <a href=\"%s\">click here</a>."
 msgstr ""
 
-#: templates/job-submitted.php:7
-msgid ""
-"Job submitted successfully. Your job listing will be visible once approved."
-msgstr ""
-
-#: wp-job-manager-functions.php:155
-msgctxt "post status"
-msgid "Draft"
+#: templates/job-submitted.php:9
+msgid "%s submitted successfully. Your listing will be visible once approved."
 msgstr ""
 
 #: wp-job-manager-functions.php:157
 msgctxt "post status"
-msgid "Preview"
-msgstr ""
-
-#: wp-job-manager-functions.php:158
-msgctxt "post status"
-msgid "Pending approval"
+msgid "Draft"
 msgstr ""
 
 #: wp-job-manager-functions.php:159
 msgctxt "post status"
-msgid "Pending payment"
+msgid "Preview"
 msgstr ""
 
 #: wp-job-manager-functions.php:160
 msgctxt "post status"
+msgid "Pending approval"
+msgstr ""
+
+#: wp-job-manager-functions.php:161
+msgctxt "post status"
+msgid "Pending payment"
+msgstr ""
+
+#: wp-job-manager-functions.php:162
+msgctxt "post status"
 msgid "Active"
 msgstr ""
 
-#: wp-job-manager-functions.php:246
+#: wp-job-manager-functions.php:248
 msgid "Reset"
 msgstr ""
 
-#: wp-job-manager-functions.php:250
+#: wp-job-manager-functions.php:252
 msgid "RSS"
 msgstr ""
 
-#: wp-job-manager-functions.php:300
+#: wp-job-manager-functions.php:302
 msgid "Your email address isn&#8217;t correct."
 msgstr ""
 
-#: wp-job-manager-functions.php:303
+#: wp-job-manager-functions.php:305
 msgid "This email is already registered, please choose another one."
 msgstr ""
 
@@ -991,7 +959,7 @@ msgid "Inactive"
 msgstr ""
 
 #: wp-job-manager-template.php:204
-msgid "Job Application via \"%s\" listing on %s"
+msgid "Application via \"%s\" listing on %s"
 msgstr ""
 
 #: wp-job-manager-template.php:262
@@ -999,7 +967,7 @@ msgid "Anywhere"
 msgstr ""
 
 #: wp-job-manager.php:98
-msgid "Are you sure you want to delete this job?"
+msgid "Are you sure you want to delete this listing?"
 msgstr ""
 
 #. Plugin Name of the plugin/theme
